@startuml
title Hot Potato - Klassendiagramm

package "Models" {
  class GameTimer {
    - Duration remainingTime
    - Duration totalDuration
    + String readableTime()
  }

  class MathChallengeModel {
    - int firstNumber
    - int secondNumber
    - String operator
    + int correctAnswer()
    + String readableChallenge()
  }
}

package "ViewModels" {
  class TimerViewModel {
    - GameTimer _timer
    - Timer? _ticker
    - bool showWrongPulse
    - bool showCorrectPulse
    + startTimer()
    + stopTimer()
    + restartTimer()
    + deductTime(Duration)
    + progress(): double
  }

  class MathChallengeViewModel {
    - MathChallengeModel _currentChallenge
    + generateChallenge()
    + checkAnswer(String): bool
  }
}

package "Widgets" {
  class TimerWidget {
    + build()
  }

  class MathChallengeWidget {
    + build()
  }
}

GameTimer <|-- TimerViewModel : has
MathChallengeModel <|-- MathChallengeViewModel : has
TimerViewModel ..> MathChallengeViewModel : interacts
TimerWidget ..> TimerViewModel : uses
MathChallengeWidget ..> MathChallengeViewModel : uses
TimerWidget ..> MathChallengeWidget : contains
TimerViewModel ..> "UI" : notifies <<ChangeNotifier>>

note left of TimerViewModel
  - steuert Countdown
  - verwaltet Puls-Flags (rot/grün)
end note

note right of MathChallengeViewModel
  - erzeugt Herausforderungen
  - validiert Antworten
end note

@enduml
